welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: type mismatch;
 found   : Int
 required: Boolean
  while(isPresent(num,cpt))
                 ^island:14: error: type mismatch;
 found   : Boolean(true)
 required: Int
    	return true
               ^island:16: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^